Update content template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,9 @@
     		</ul>
 		</nav>
 		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Pauline!</h1>
-				<p>I'm passionate about learning and technology. More about me <a href="/about">here.</a></p>
-    		</div><!-- /.blurb -->
+			
+    		{{ content }}
+			
 		</div><!-- /.container -->
 		<footer>
     		<ul>
