remove slash after linkedin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         		<li><a href="mailto:pauline.m.kelly1@gmail.com">email me</a></li>
         		<li><a href="https://github.com/sebbenbear">github</a></li>
                         <li><a href="https://twitter.com/Sebbenbear">twitter</a></li>
-			<li><a href="https://www.linkedin.com/in/pauline-kelly-69594b51">linkedin/</a></li>
+			<li><a href="https://www.linkedin.com/in/pauline-kelly-69594b51">linkedin</a></li>
 			</ul>
 		</footer>
 	</body>
