fixed hackerrank link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         		<li><a href="https://github.com/sebbenbear">github</a></li>
                 <li><a href="https://twitter.com/Sebbenbear">twitter</a></li>
 				<li><a href="https://www.linkedin.com/in/pauline-kelly-69594b51">linkedin</a></li>
-				<li><a href="www.hackerrank.com/sebbenbear">hacker rank</a></li>
+				<li><a href="https://www.hackerrank.com/sebbenbear">hacker rank</a></li>
 			</ul>
 		</footer>
 	</body>
