--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,11 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+				<li><a href="/blog">Blog</a></li>
+				<li><a href="/experience">Experience</a></li>
+				<li><a href="/education">Education</a></li>
+				<li><a href="/projects">Projects</a></li>
     		</ul>
 		</nav>
 		<div class="container">
