--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,10 @@
 		
 	</head>
 	<body>
+		{% assign current = page.url | downcase | split: '/' %}
 		<nav>
     		<ul>
-	        	<li><a href="/about">About</a></li>
+				<li><a href="/about" {% if current[1] == "about" %} class='current' {% endif %} >About</a></li>
 				<li><a href="/blog">Blog</a></li>
 				<li><a href="/experience">Experience</a></li>
 				<li><a href="/education">Education</a></li>
