--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
 		<nav>
     		<ul>
 				<li><a href="/about" {% if current[1] == "about" %} class='current' {% endif %} >About</a></li>
-				<li><a href="/blog">Blog</a></li>
-				<li><a href="/experience">Experience</a></li>
-				<li><a href="/education">Education</a></li>
-				<li><a href="/projects">Projects</a></li>
+				<li><a href="/blog" {% if current[1] == "blog" %} class='current' {% endif %} >Blog</a></li>
+				<li><a href="/experience" {% if current[1] == "experience" %} class='current' {% endif %} >Experience</a></li>
+				<li><a href="/education" {% if current[1] == "education" %} class='current' {% endif %} >Education</a></li>
+				<li><a href="/projects" {% if current[1] == "projects" %} class='current' {% endif %} >Projects</a></li>
     		</ul>
 		</nav>
 		<div class="container">
