--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
 		
 	</head>
 	<body>
+		<div class="heading">
+			<h1 class="heading-content">Pauline Kelly</h1>
+		</div>
 		{% assign current = page.url | downcase | split: '/' %}
 		<nav>
     		<ul>
