--- a/css/main.css
+++ b/css/main.css
@@ -34,10 +34,15 @@ h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
+h2 {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    background: #AE6AC5;
+}
 p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 footer {
     border-top: 1px solid #d5d5d5;
