--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ h1 {
 }
 h2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    background: #AE6AC5;
+    color: #AE6AC5;
 }
 p {
     font-size: 1.5em;
