--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,10 @@ ul.posts li {
     list-style: none;
 }
 
+.read-more {
+    text-align: right;
+}
+
 .img-responsive {
     width: 100%;
     height: auto;
