--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ nav ul, footer ul {
     padding: 0px;
     list-style: none;
     font-weight: bold;
+    font-size: 1.6em;
 }
 nav ul li, footer ul li {
     display: inline;
